<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Login</string>
    <string name="email">  Email</string>
    <string name="password">  Password</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="application_theme">Application Theme</string>
    <string name="language">Language</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="there_is_no_existing_email">There is no existing email</string>
    <string name="total_photos">"Total Photos: "</string>
    <string name="upload">Upload</string>
    <string name="storage">Storage</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="fill_fields_message">Please fill all the fields</string>
    <string name="login_failed">Login failed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_image">Delete Image</string>
    <string name="are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this image?</string>
    <string name="failed_to_fetch_image_details">Failed to fetch image details</string>
    <string name="date">"Date: "</string>
    <string name="size">"Size: "</string>
    <string name="image_details">Image Details</string>
    <string name="ok">Ok</string>
    <string name="failed_to_delete_image">Failed to delete image</string>
    <string name="image_deleted">Image deleted</string>
    <string name="please_select_an_image_first">Please select an image first</string>
    <string name="failed_to_upload">Failed to Upload</string>
    <string name="successfully_uploaded">Successfully Uploaded</string>
    <string name="uploading_file">Uploading File....</string>
    <string name="please_sign_in_to_upload_images">Please sign in to upload images</string>
    <string name="please_sign_in_to_access_storage">Please sign in to access storage</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="register_successful">Register successful</string>
    <string name="register_failed">Register failed</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="name">"Name: "</string>
    <string name="image_path_not_found">Image path not found</string>
    <string name="image_deleted_successfully">Image deleted successfully</string>
    <string name="an_error_occurred_while_deleting_the_image">An error occurred while deleting the image</string>
    <string name="failed_to_get_file_size">Failed to get file size</string>
    <string name="storage_limit_exceeded">Storage limit exceeded</string>
    <string name="storage_usage">Storage Usage: </string>
    <string name="login_to_see_storage_size">Login to see storage size</string>
    <string name="image_downloaded" > Image downloaded</string>
    <string name="failed_to_download_image" > Failed to download image</string>
    <string name="downloading_image">Downloading image</string>
    <string name="downloading_image_from_firebase_storage">Downloading image from Firebase Storage</string>
    <string name="downloading_imagee">Downloading Image...</string>
    <string name="permission_granted">Permission Granted!</string>
</resources>